[package]
name = "patternsleuth"
version = "0.1.0"
edition = "2021"

[[bench]]
name = "scan"
harness = false

[profile.release]
incremental = true
debug = true

[dependencies]
anyhow = "1.0.72"
byteorder = "1.4.3"
clap = { version = "4.3.21", features = ["derive"] }
colored = "2.0.4"
globset = "0.4.13"
iced-x86 = "1.20.0"
itertools = "0.10.5"
memchr = "2.5.0"
msvc-demangler = "0.9.0"
object = "0.31.1"
pdb = "0.8.0"
prettytable-rs = "0.10.0"
rayon = "1.7.0"
regex = "1.9.3"
strum = {version = "0.24.1", features = ["strum_macros", "derive"]}

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
rand = "0.8.5"

[patch.crates-io]
object = { git = "https://github.com/trumank/object.git", branch = "expose-inner" }
