[workspace]
resolver = "2"
members = [
    "patternsleuth",
    "patternsleuth_cli",
    "patternsleuth_scanner",
    "examples/*",
]
default-members = ["patternsleuth_*"]

[workspace.package]
repository = "https://github.com/trumank/patternsleuth"
authors = [ "trumank" ]
license = "MIT OR Apache-2.0"
version = "0.1.0"
edition = "2021"

[profile.release]
incremental = true
debug = true

[workspace.dependencies]
anyhow = "1.0.72"
clap = { version = "4.3.21", features = ["derive"] }
colored = "2.0.4"
globset = "0.4.13"
iced-x86 = "1.20.0"
itertools = "0.11.0"
memchr = "2.5.0"
msvc-demangler = "0.9.0"
object = "0.32.0"
pdb = "0.8.0"
prettytable-rs = "0.10.0"
rayon = "1.7.0"
regex = "1.9.3"
serde = "1.0.193"
strum = {version = "0.25.0", features = ["strum_macros", "derive"]}
windows = { version = "0.52.0" }
