[package]
name = "patternsleuth"
repository.workspace = true
authors.workspace = true
license.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
patternsleuth_scanner = { path = "../patternsleuth_scanner" }
anyhow = { workspace = true }
memchr = { workspace = true }
msvc-demangler = { workspace = true }
object = { workspace = true }
pdb = { workspace = true }
rayon = { workspace = true }
strum = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = { version = "0.2.147", optional = true }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.48.0", optional = true, features = [
  "Win32_Foundation",
  "Win32_System_LibraryLoader",
  "Win32_System_ProcessStatus",
  "Win32_System_Threading",
] }

[features]
process-external = ["dep:libc", "dep:windows"]
process-internal = ["dep:libc", "dep:windows"]
