[package]
name = "patternsleuth"
repository.workspace = true
authors.workspace = true
license.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
patternsleuth_scanner = { path = "../patternsleuth_scanner" }
anyhow = { workspace = true }
memchr = { workspace = true }
object = { workspace = true }
rayon = { workspace = true }
strum = { workspace = true }
pdb = { workspace = true, optional = true }
msvc-demangler = { workspace = true, optional = true}
iced-x86.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
libc = { version = "0.2.147", optional = true }

[target.'cfg(windows)'.dependencies]
windows = { workspace = true, optional = true, features = [
  "Win32_Foundation",
  "Win32_System_LibraryLoader",
  "Win32_System_ProcessStatus",
  "Win32_System_Threading",
  "Win32_System_Diagnostics_Debug",
] }

[features]
patterns = []
symbols = ["dep:pdb", "dep:msvc-demangler"]
process-external = ["dep:libc", "dep:windows"]
process-internal = ["dep:libc", "dep:windows"]
