[package]
name = "patternsleuth"
repository.workspace = true
authors.workspace = true
license.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
patternsleuth_scanner = { path = "../patternsleuth_scanner" }
anyhow = { workspace = true }
memchr = { workspace = true }
object = { workspace = true }
rayon = { workspace = true }
strum = { workspace = true }
pdb = { workspace = true, optional = true }
msvc-demangler = { workspace = true, optional = true}
iced-x86.workspace = true
futures = "0.3.30"
futures-scopes = "0.2.0"
inventory = "0.3.14"
itertools.workspace = true
serde = { workspace = true, optional = true, features = ["derive"] }
typetag = { version = "0.2.15", optional = true }
gimli = "0.28.1"

[target.'cfg(target_os = "linux")'.dependencies]
libc = { version = "0.2.152", optional = true }

[target.'cfg(windows)'.dependencies]
windows = { workspace = true, optional = true, features = [
  "Win32_Foundation",
  "Win32_System_LibraryLoader",
  "Win32_System_ProcessStatus",
  "Win32_System_Threading",
  "Win32_System_Diagnostics_Debug",
] }

[features]
patterns = []
serde-resolvers = ["dep:serde", "dep:typetag"]
symbols = ["dep:pdb", "dep:msvc-demangler"]
process-external = ["dep:libc", "dep:windows"]
process-internal = ["dep:libc", "dep:windows"]
