[package]
name = "patternsleuth_image"
repository.workspace = true
authors.workspace = true
license.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
patternsleuth_scanner = { path = "../patternsleuth_scanner" }
anyhow = { workspace = true }
object = { workspace = true }
pdb = { workspace = true, optional = true }
msvc-demangler = { workspace = true, optional = true}
itertools.workspace = true
serde = { workspace = true, optional = true, features = ["derive"] }
gimli = { version = "0.28.1", optional = true }
minidump = "0.24.1"

[target.'cfg(target_os = "linux")'.dependencies]
libc = { version = "0.2.152", optional = true }

[target.'cfg(windows)'.dependencies]
windows = { workspace = true, optional = true, features = [
  "Win32_Foundation",
  "Win32_System_LibraryLoader",
  "Win32_System_ProcessStatus",
  "Win32_System_Threading",
  "Win32_System_Diagnostics_Debug",
] }

[features]
default = []
serde-resolvers = ["dep:serde"]
symbols = ["dep:pdb", "dep:msvc-demangler"]
process-external = ["image-pe", "dep:libc", "dep:windows"]
process-internal = ["dep:libc", "dep:windows"]
image-pe = []
image-elf = ["dep:gimli"]
