[package]
name = "patternsleuth_resolvers"
repository.workspace = true
authors.workspace = true
license.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
patternsleuth_scanner = { path = "../patternsleuth_scanner" }
patternsleuth_image = { path = "../patternsleuth_image" }
iced-x86.workspace = true
futures = "0.3.30"
futures-scopes = "0.2.0"
inventory = "0.3.14"
itertools.workspace = true
serde = { workspace = true, optional = true, features = ["derive"] }
typetag = { version = "0.2.15", optional = true }
tracing = "0.1.40"

[features]
default = ["image-pe", "image-elf"]
serde-resolvers = ["dep:serde", "dep:typetag", "patternsleuth_image/serde-resolvers"]
image-pe = ["patternsleuth_image/image-pe"]
image-elf = ["patternsleuth_image/image-elf"]
