[package]
name = "dll_hook"
repository.workspace = true
authors.workspace = true
license.workspace = true
version.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
anyhow = { workspace = true }
bitflags = "2.4.1"
eframe = "0.25.0"
egui-winit = { version = "0.25.0", default-features = false }
indexmap = "2.1.0"
itertools.workspace = true
parking_lot = "0.12.1"
patternsleuth = { path = "../../patternsleuth", features = ["process-internal"] }
retour = { git = "https://github.com/Hpmason/retour-rs", features = ["static-detour"] }
simple-log = "1.6.0"
thread_local = "1.1.7"
widestring = "1.0.2"
windows = { workspace = true, features = [
  "Win32_Foundation",
  "Win32_System_SystemServices",
  "Win32_UI_WindowsAndMessaging",
  "Win32_System_LibraryLoader",
  "Win32_System_Memory",
  "Win32_System_Threading",
  "Win32_Security",
  "Win32_System_ProcessStatus",
] }
